add trial wheel works

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,6 +120,22 @@ a{
 	-ms-transform: rotate(360deg);
 	border-color: #c0392b transparent;	
 }
+#wheel div.sec:nth-child(6){
+	transform: rotate(360deg);
+	-webkit-transform: rotate(360deg);
+	-moz-transform: rotate(360deg);
+	-o-transform: rotate(360deg);
+	-ms-transform: rotate(360deg);
+	border-color: #c0392b transparent;	
+}
+#wheel div.sec:nth-child(6){
+	transform: rotate(360deg);
+	-webkit-transform: rotate(360deg);
+	-moz-transform: rotate(360deg);
+	-o-transform: rotate(360deg);
+	-ms-transform: rotate(360deg);
+	border-color: #c0392b transparent;	
+}
 
 
 #wheel div.sec .fa{
